config/manifests/contour-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: contour-gateway
  labels:
    app: contour-gateway
    vendor: vmware
    category: ingress
