config/manifests/contour-gateway/example.yaml
---
# https://projectcontour.io/docs/main/config/api/#projectcontour.io%2fv1
# https://gateway-api.sigs.k8s.io/api-types/httproute/

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  labels:
    app: X
  name: X
  namespace: X
spec:
  hostnames:
    - myhostname.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: contour
      namespace: projectcontour
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kuard
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: example-gateway
      sectionName: https
  hostnames:
    - foo.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: foo-app
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /orders
      backendRefs:
        - name: foo-orders-app
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar
spec:
  parentRefs:
    - name: example-gateway
      sectionName: https
  hostnames:
    - bar.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bar-app
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
    - name: example-gateway
      sectionName: http
  hostnames:
    - foo.example.com
    - bar.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
